mock-exam/securing-workloads/peerauth.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: strict-disable9000
  namespace: default
spec:
  selector:
    matchLabels:
      mtls: strict
  mtls:
    mode: STRICT
  portLevelMtls:
    9000:
      mode: DISABLE
